trying to fix image distortion issue in Safari

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -96,7 +96,6 @@ button {
 #tim {
     float: left;
     width: 50%;
-    height: auto;
     position: relative;
     margin: 60px 10px 20px 10px;
 }
